<resources>
    <string name="app_name">e-season</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_season">Seasons</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_time_table">Time Table</string>

    <string name="chat_securely_with_friends_and_family_in_real_time">Chat securely with friends and family in real-time.</string>
    <string name="secure_messaging">Secure Messaging</string>
    <string name="welcome_to_your">Welcome to</string>
    <string name="application">E-SEASON</string>
    <string name="profile_management">Profile Management</string>
    <string name="easily_update_and_manage_your_personal_information_settings_and_preferences">Easily update and manage your personal information, settings, and preferences.</string>
    <string name="monitor_your_daily_activities_and_track_your_progress_over_time">Monitor your daily activities and track your progress over time.</string>
    <string name="activity_tracking">Activity Tracking</string>
    <string name="by_pressing_continue_you_agree_to_our_terms_of_service_and_that_you_have_read_our_privacy_policy">By pressing continue, you agree to our Terms of Service and that you have read our Privacy Policy.</string>

    <string name="default_web_client_id">576561881244-83bme6v101k67kvqna8deij7avkrt5j3.apps.googleusercontent.com</string>

</resources>